[project]
name = "langgraph-critic-memory"
version = "0.1.0"
description = "LangGraph demo: long-term Store memory + an adversarial critic gate with an iterate loop."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.3,<2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2",
    "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
dev = ["pytest>=8"]

[project.scripts]
critic-memory-demo = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
